k8s-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: health-service-pod
  labels:
    app: app-pod                 # имя метки, по которому service определяет с каки подом работать
spec:
  containers:
    - image: irnsk/otus:lesson4
      name: health-service
      ports:
        - containerPort: 1234
