k8s-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-service-lb
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 1234
  selector:
    app: app-pod                     # pod label
