k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-service
#  labels:
#     app: health-service
spec:
  type: NodePort
  selector:
    app: app-pod                     # pod label
  #  type: ClusterIP
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 1234  # port * on any Pod with the 'pod-label' label
