k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
  #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    #kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: health-service
      port:
        number: 8000
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: health-service
                port:
                  number: 8000
